Fix contact section alignment and button

--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ body{
     margin: 0px;   
   }  
   
+  
   .header,
   .team,
   .contact {
+    min-width: 752px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -135,8 +137,6 @@ body{
 
   .team {
     height: 300px;
-    width: auto;
-    min-width: 750px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -232,4 +232,35 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .contact-right {
+    margin-left: -60px;
+    margin-bottom: -50px;
+  }
+
+  .button {
+    background-color: rgb(24, 87, 24);
+    border: none;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    width: 130px;
+  }
+
+  .email {
+    background-color: white; 
+    color: black; 
+    border: 2px solid rgb(24, 87, 24);
+  }
+
+  .email:hover {
+    background-color: rgb(24, 87, 24);
+    color: white;
   }
